nabar and header added

--- a/index.html
+++ b/index.html
@@ -5,20 +5,153 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer products</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h3>Influencer products</h3>
+            <h3 class="nav-title">Influencer products</h3>
          <ul>
-            <li><a href="">Home </a></li>
+            <li><a href="">Home</a></li>
             <li><a href="">Products</a></li>
             <li><a href=""> Sign up</a></li>
             <li><a href="">Log in</a></li>
          </ul>
         </nav>
+
+        <div class="banner-head">
+
+         <div class="banner-text">
+            <h2 class="head-title" >Start your Journey as <br>
+                Influencer.</h2>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+                vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <button class="btn-primary">Preebook now</button>
+         </div>
+            <img src="images/main-camera.png" alt="">
+        </div>
     </header>
+
+<!-- start main section  -->
+    <main>
+        <!-- start sponser section  -->
+         <div class="sponer-head">
+              <div class="sponser-logo">
+                <img src="logos/Alibaba.svg" alt="">
+              </div>
+
+              <div class="sponser-logo">
+                <img src="logos/Amazon.svg" alt="">
+              </div>
+
+              <div class="sponser-logo">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+              </div>
+
+              <div class="sponser-logo">
+                <img src="logos/Ebay.svg" alt="">
+              </div>
+
+              <div class="sponser-logo">
+                <img src="logos/Rakuten.svg" alt="">
+              </div>
+
+              <div class="sponser-logo">
+                <img src="logos/Target.svg" alt="">
+              </div>
+
+              <div class="sponser-logo">
+                <img src="logos/Walmart.svg" alt="">
+              </div>
+
+
+         </div>
+   <!-- start Popular Collection  -->
+         <section>
+            <h2 class="collection">Popular Collection</h2>
+
+            <div class="popular-collection">
+                  <div class="all-collection">
+                    <img src="images/tripod.png" alt="">            
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                 
+                    <p class="col-description" >wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/mic.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/airpod.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/drone.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/lights.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/setup.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/camera.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/single-light.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+
+
+                  <div class="all-collection">
+                    <img src="images/action.png" alt="">
+                    <h3 class="col-title">Flex Tripod</h3>
+                    <h3 class="doller-title">$100</h3>
+                    <p class="col-description">wordwide shifting available <br> Buyers protection possible</p>
+                  </div>
+            </div>
+         </section>
+           <!-- end Popular Collection  -->
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
