--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
          </div>
    <!-- start Popular Collection  -->
-         <section>
+         <section class="popular-section">
             <h2 class="collection">Popular Collection</h2>
 
             <div class="popular-collection">
